src/test/resources/amyc/typer/failing/IfError2.amy
object IfError
  if (true) { () } else { false }
end IfError
